# H-Intercal

./: .gitignore  H-Intercal.cabal  HIntercal.hs  HIntercalCheck.hs  HIntercalParser.hs  HIntercalTypes.hs  INSTALLING.md  LICENSE  README.md  stdlib.i
examples/: fib.i  sample.i
sample_programs/: helloworld.i  sample.i  test.i
